openshift/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend
  namespace: ops-control-plane
  labels:
    app: backend
spec:
  to:
    kind: Service
    name: backend
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
